[tool.poetry]
name = "cybozu-schedule-scraping-webdriver"
version = "0.1.0"
description = ""
authors = ["Yasunori Ishiguro <ishiguro-y@dainichi-consul.co.jp>"]
readme = "README.md"
packages = [{ include = "cybozu_schedule_scraping_webdriver" }]

[tool.poetry.dependencies]
python = "^3.11"
webdriver-manager = "^3.8.6"
selenium = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
extend-exclude = [".venv"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ['\.venv']
